add Maven memory config to pom.xml